# alya-launcher

./: .gitignore  index.html  package.json
scripts/: install-arch.sh
src/: App.css  App.tsx  lib.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
